# SRGFADE

./: .gitignore  BASELINE.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  release-manifest.md  release-readiness-audit.md  release-validation.md  release-verification.md
examples/: README.md  quick_start.py
srgfade/: __init__.py  base.py  core.py
tests/: README.md  test_regression.py  test_smoke.py
